--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,6 +9,7 @@
 @import url('./base.css');
 @import url('./container.css');
 @import url('./animations.css');
+@import url('./utilities.css');
 @import url('./izitoast.css');
 @import url('./loader.css');
 
